--- a/lib/horobot2/web_interface/status_group.html.erb
+++ b/lib/horobot2/web_interface/status_group.html.erb
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>HoroBot2 Status</title>
+    <title>Status of <%= h group.name %></title>
     <style>
       html {
         font-family: sans-serif;
@@ -53,7 +53,6 @@
     </style>
   </head>
   <body>
-    <% group = data[:group] %>
     <h1>Status of <%= h group.name %></h1>
     <a href="/status">Back</a>
 
