--- a/lib/horobot2/web_interface/control_page.html.erb
+++ b/lib/horobot2/web_interface/control_page.html.erb
@@ -23,6 +23,10 @@
       }
       #manual-message-log-buffer {
         display: none;
+        box-sizing: border-box;
+        width: 100%;
+        height: 12em;
+        resize: none;
       }
     </style>
   </head>
@@ -81,11 +85,19 @@
         request.send(body)
       }
 
-      document.getElementById('manual-message-send-button').addEventListener('click', function(event) {
+      document.getElementById('manual-message-send-button').addEventListener('click', sendManualMessage)
+      document.getElementById('manual-message-message-text').addEventListener('keydown', function(event) {
+        if (event.key == 'Enter' || event.keyCode == 13) {
+          sendManualMessage()
+        }
+      })
+
+      function sendManualMessage() {
         function writeLog(text) {
           var buffer = document.getElementById('manual-message-log-buffer')
           buffer.style.display = 'block'
           buffer.value = buffer.value + text + "\n"
+          buffer.scrollTop = buffer.scrollHeight
         }
 
         var group = document.getElementById('manual-message-target-group').value
@@ -99,13 +111,14 @@
           return
         }
 
-        event.target.disabled = true
+        var button = document.getElementById('manual-message-send-button')
+        button.disabled = true
         sendInstruction({
           method: 'send_message',
           group_name: group,
           text: text
         }, function(err, response) {
-          event.target.disabled = false
+          button.disabled = false
           if (err) {
             writeLog('Error: ' + err.message)
             return
@@ -113,7 +126,7 @@
           writeLog(group + ' <-- ' + text)
           document.getElementById('manual-message-message-text').value = ''
         })
-      })
+      }
     })()
     </script>
   </body>
