Add Group property horo_speak_on_reply

--- a/lib/horobot2/web_interface/status_group.html.erb
+++ b/lib/horobot2/web_interface/status_group.html.erb
@@ -62,6 +62,7 @@
 
     <p><strong>Temperature: </strong>(<%= group.temperature %>/<%= group.threshold %>)</p>
     <p><strong>Cooling speed: </strong><%= group.cooling_speed %></p>
+    <p><strong>HoroSpeak on reply: </strong><%= group.horo_speak_on_reply %></p>
     <p><strong>Emojis: </strong><a class="emoji-list-switch" href="javascript:void(0)">Show/Hide</a></p>
 
     <ul class="emoji-list">
